// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Superscript and Subscript Nested SupSub 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 2`] = `
Array [
  0.35,
  0,
  0.028,
  0,
  0.35,
  0.01862,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 3`] = `
Array [
  0.175,
  0,
  0.042,
  0,
  0.175,
  0.03234,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 4`] = `
Array [
  0.0875,
  0,
  0.049,
  0,
  0.0875,
  0.037,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 5`] = `
Array [
  0.0875,
  0,
  0.049,
  0,
  0.0875,
  0.03001,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 6`] = `
Array [
  0.175,
  0,
  0.042,
  0,
  0.175,
  0.01176,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 7`] = `
Array [
  0.35,
  0,
  0.028,
  0,
  0.35,
  -0.00931,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 2`] = `
Array [
  0.35,
  0,
  0.028,
  0,
  0.35,
  0.01862,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 3`] = `
Array [
  0.35,
  0,
  0.028,
  0,
  0.35,
  -0.00931,
  0,
  0,
  1,
]
`;
